--- a/templates/default/application.pill.erb
+++ b/templates/default/application.pill.erb
@@ -1,3 +1,5 @@
+ENV['PATH'] = "/home/<%= @app_name %>/.ruby/bin:#{ENV['PATH']}"
+
 Bluepill.application('<%= @app_name %>') do |app|
 
   app.working_dir = '<%= @work_dir %>'
