--- a/templates/default/vhost.conf.erb
+++ b/templates/default/vhost.conf.erb
@@ -1,4 +1,4 @@
-server {
+  server {
   listen <%= node['sleepers']['http_port'] %>;
   server_name <%= @server_name %>;
   root <%= @root %>;
@@ -23,5 +23,6 @@ server {
     proxy_set_header  Host                $http_host;
     proxy_set_header  X-Real-IP           $remote_addr;
     proxy_set_header  X-Forwarded-For     $proxy_add_x_forwarded_for;
+    proxy_set_header  X-Forwarded-Proto   $scheme;
   }
 }
